--- a/templates/register.html
+++ b/templates/register.html
@@ -32,7 +32,7 @@ body {
     flex-direction: row;
 }
 .left{
-    background-image: url(https://github.com/csc2023/Syrga-Salima/blob/main/img/choco%20loco.png?raw=true);
+    background-image: url(https://github.com/xtjkisy/syrga./blob/main/choco%20loco.png?raw=true);
     background-size: cover;
     width: 40%;
     background-repeat: no-repeat;
